Correções conforme orientação do prof. Américo

--- a/Dissertacao_Marcelo_Goncalves/capitulos/formalizacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/formalizacao.tex
@@ -197,9 +197,9 @@ $t_1 < t_2 \iff cpu(t_1) < cpu(t_2) \land mem(t_1) < mem(t_2)$.
 
 $t_1 > t_2 \iff cpu(t_1) > cpu(t_2) \land mem(t_1) > mem(t_2)$.
 
-$cpu(t_1) < cpu(t_2) \land mem(t_1) > mem(t_2) \iff$ relação indeterminada entre t_1 e t_2.
+$cpu(t_1) < cpu(t_2) \land mem(t_1) > mem(t_2) \iff$ relação indeterminada entre $t_1$ e $t_2$.
 
-$cpu(t_1) > cpu(t_2) \land mem(t_1) < mem(t_2) \iff$ relação indeterminada entre t_1 e t_2.
+$cpu(t_1) > cpu(t_2) \land mem(t_1) < mem(t_2) \iff$ relação indeterminada entre $t_1$ e $t_2$.
 
 \subsection{Categorias de Máquinas Virtuais}
 Seja $Cat(P)$ um conjunto de Categorias de Máquinas Virtuais fornecidas pelo 
