--- a/Dissertacao_Marcelo_Goncalves/capitulos/heuristicas.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/heuristicas.tex
@@ -3,15 +3,15 @@ Dadas as definições e formalizações propostas no anteriormente, faz-se neces
 a especificação de uma lógica de manipulação das entidades e operações descritas.
 
 Passamos agora a descrever uma proposta de construção de estratégias de avaliação
-dos Resultados de Execuções a fim de buscar as Configurações mais baratas capazes
+dos Resultados de Execuções a fim de buscar as Configurações de menor preço capazes
 de executar uma determinada Carga de Trabalho. A essas estratégias demos o nome 
 de Heurísticas de Avaliação. 
 
-As Heurísticas de Avaliação de Capacidade, conforme propostas neste trabalho, são lógicas de
-raciocínio que buscam encontrar, a partir do Resultado de uma Execução da 
-Aplicação sob Teste sob uma Carga de Trabalho inicial em uma Configuração inicial, se 
-existe uma Configuração mais barata que seja capaz de executar a mesma Carga de 
-Trabalho.
+As Heurísticas de Avaliação de Capacidade, conforme propostas neste trabalho, 
+são implementações de estratégias que buscam encontrar, a partir do Resultado 
+de uma Execução da Aplicação sob Teste sob uma Carga de Trabalho inicial em uma 
+Configuração inicial, se existe uma Configuração mais barata que seja capaz de 
+executar a mesma Carga de Trabalho.
 
 O funcionamento de uma Heurística é totalmente baseado no caminhamento sobre o
 Espaço de Implantação e sobre um a faixa de valores de Cargas de Trabalho. O 
