Correções e capitulo de Trabalhos relacionados

--- a/Dissertacao_Marcelo_Goncalves/capitulos/introducao.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/introducao.tex
@@ -28,7 +28,7 @@ variação de arquitetura de implantação por meio de procedimentos de escalabi
  
 Ao se tomarem procedimentos de escalabilidade vertical (variando-se a quantidade de recursos de 
 cada máquina) e/ou de escalabilidade horizontal (variando-se a quantidade de máquinas em uma ou 
-mais camadas, como dados, apresentação e negócio) chega-se a níveis de desempenho e de custo muito 
+mais camadas da aplicação, como dados, apresentação e negócio) chega-se a níveis de desempenho e de custo muito 
 diversos. A variação da demanda exige que a aplicação também varie em tamanho da implantação, 
 vertical ou horizontalmente, conforme a carga aplicada. Quanto mais acentuadas e mais frequentes 
 as variações na demanda, mais variações de custo e desempenho serão observadas.
@@ -51,7 +51,7 @@ contento e ainda calcular o custo mensal dessa implantação.
 
 Porém, partindo-se do pressuposto de que o desempenho da aplicação foi satisfatório, o que se 
 tem até agora é o custo de uma única configuração capaz de executar a aplicação estudada sob 
-um único nível de carga de trabalho. Mas cargas de trabalho costumam variar em função do tempo 
+um único nível de carga de trabalho. No entanto, cargas de trabalho costumam variar em função do tempo 
 em implantações reais, fazendo-se necessário, portanto, que esse efeito seja contemplado nos 
 testes por meio da medição do desempenho da aplicação submetida a diferentes níveis de carga 
 de trabalho.
@@ -69,7 +69,7 @@ patamares elevados de custo, a depender das necessidades de variação da demand
 de implantação e das configurações utilizadas em cada arquitetura implantada 
 \cite{silva2013cloudbench}. Ainda que certos provedores IaaS ofereçam descontos ou pacotes de 
 horas grátis para novos clientes, em geral esses incentivos são suficientes para custear apenas 
-um mês de utilização de uma única máquina virtual muito pequena, provavelmente incapaz suportar 
+um mês de utilização de uma única máquina virtual muito pequena, provavelmente incapaz de suportar 
 a carga de uma aplicação real em produção. Assim, executar uma aplicação real, tipicamente 
 implantada em arquitetura de várias camadas, em máquinas virtuais de tamanho considerável e por 
 longos períodos de tempo apenas para estudar o seu comportamento, pode se traduzir em um custo 
