--- a/Dissertacao_Marcelo_Goncalves/dissertacao.bib
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.bib
@@ -6,11 +6,11 @@
   year={2011},
   organization={IEEE}
 }
-@phdthesis{cunha2012ambiente,
-  title={Um Ambiente Program{\'a}vel para Avaliar o Desempenho de Aplica{\c{c}}oes em Nuvens de Infraestrutura},
+@MastersThesis{cunha2012ambiente,
   author={Cunha, Matheus Cir{\i}aco Cerqueira},
+  title={Um Ambiente Program{\'a}vel para Avaliar o Desempenho de Aplica{\c{c}}oes em Nuvens de Infraestrutura},
   year={2012},
-  school={Master’s thesis, Universidade de Fortaleza}
+  school={Universidade de Fortaleza}
 }
 @inproceedings{iosup2011performance,
   title={On the performance variability of production cloud services},
