--- a/Dissertacao_Marcelo_Goncalves/capitulos/relacionados.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/relacionados.tex
@@ -1,2 +1,29 @@
 \chapter[Trabalhos Relacionados]{Trabalhos Relacionados}
 % ----------------------------------------------------------
+Apresentamos  neste capítulo alguns trabalhos cujos objetivos estejam alinhados 
+com a ideia da avaliação de desempenho de aplicações executadas em ambientes de
+computação em nuvem. Fazemos então uma análise de seus objetivos e resultados 
+alcançados, bem como traçamos as semelhanças com este trabalho, avaliando quais são
+nossas contribuições diferenciais.
+
+\section{CloudBench}
+\cite{silva2013cloudbench} descrevem o CloudBench como um arcabouço para 
+automação dos testes e avaliação do desempenho de ambientes de nuvem computacional 
+sob o modelo IaaS. Através da abstração de experimentos, aplicações e máquinas 
+virtuais, CloudBench a execução dos testes e a coleta de dados relativos
+às métricas de desempenho observadas. CloudBench prevê métricas que dizem respeito
+não só à aplicação, mas também ao provedor, como latência de provisionamento. 
+
+As abstrações criadas pelo CloudBench permitem que um experimento seja 
+especificado através de uma lista de diretivas. Essas diretivas descrevem os itens
+que compõem o experimento, definindo objetos como a aplicação e asinstâncias de 
+máquinas virtuais utilizadas.
+
+******* CloudBench executa apenas benchmarks! 
+(página 3 = The applications used in the experiments are predefined
+benchmarks that fall into one of the categories
+previously discussed, making CloudBench a metabenchmark
+(or benchmark harness).)
+
+
+\cite{li2011cloudprophet}
