--- a/Diagramas/capacity-space-graph-elastic-horizontal.tex
+++ b/Diagramas/capacity-space-graph-elastic-horizontal.tex
@@ -1,9 +1,15 @@
 digraph g{
   // rankdir=LR;
   node [shape=box, fillcolor="burlywood", style="filled,rounded"];
-   
-  // cost (elastic)
 
+  "root" [shape=box, fillcolor="white", style="filled,rounded"];
+  
+  "root" -> "m3.m(1)"
+  "root" -> "c3.l(1)"
+  
+   
+  // category-type
+  
   subgraph cluster0 {
     "m3.m(1)" -> "m3.m(2)"
 
@@ -53,34 +59,53 @@ digraph g{
     "c3.2xl(3)" -> "c3.2xl(4)"
   }  
 
-  "m3.m(1)" -> "c3.l(1)" 
+  subgraph cluster6 {
+    "m3.2xl(1)" -> "m3.2xl(2)"
 
-  "c3.l(1)" -> "m3.l(1)" 
+    "m3.2xl(2)" -> "m3.2xl(3)"
 
-  "m3.l(1)" -> "c3.xl(1)"
+    "m3.2xl(3)" -> "m3.2xl(4)"
+  }
 
-  "c3.xl(1)" -> "m3.xl(1)"
-
-  "m3.xl(1)" -> "c3.2xl(1)"
+  "m3.m(1)" -> "m3.l(1)" 
   
-  "m3.m(4)" -> "c3.2xl(1)"
-
-  "c3.l(4)" -> "c3.2xl(1)"
-
-  //
- 
-  "m3.l(4)" -> "c3.xl(4)"
-
-  "m3.l(4)" -> "c3.2xl(2)"
-
-  "m3.m(4)" -> "c3.l(4)"
-
-  "m3.m(4)" -> "c3.xl(2)"
+  "m3.m(2)" -> "m3.l(2)"
   
-  "c3.l(4)" -> "m3.l(3)"
+  "m3.m(3)" -> "m3.l(3)"
+  
+  "m3.m(4)" -> "m3.l(4)"   
 
-  "m3.xl(4)" -> "c3.2xl(4)" 
+  "m3.l(1)" -> "m3.xl(1)" 
+  
+  "m3.l(2)" -> "m3.xl(2)"
+  
+  "m3.l(3)" -> "m3.xl(3)"
+  
+  "m3.l(4)" -> "m3.xl(4)"  
 
-  "c3.xl(4)" -> "m3.xl(3)"
+  "m3.xl(1)" -> "m3.2xl(1)" 
+  
+  "m3.xl(2)" -> "m3.2xl(2)"
+  
+  "m3.xl(3)" -> "m3.2xl(3)"
+  
+  "m3.xl(4)" -> "m3.2xl(4)"
 
+   //
+
+  "c3.l(1)" -> "c3.xl(1)"
+   
+  "c3.l(2)" -> "c3.xl(2)"
+  
+  "c3.l(3)" -> "c3.xl(3)"
+  
+  "c3.l(4)" -> "c3.xl(4)" 
+  
+  "c3.xl(1)" -> "c3.2xl(1)" 
+  
+  "c3.xl(2)" -> "c3.2xl(2)"
+  
+  "c3.xl(3)" -> "c3.2xl(3)"
+  
+  "c3.xl(4)" -> "c3.2xl(4)"
 }
