Melhorias no texto

--- a/Dissertacao_Marcelo_Goncalves/capitulos/formalizacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/formalizacao.tex
@@ -1,11 +1,11 @@
-\chapter[Formalização do Problema]{Formalização do Problema}
+\chapter[Formalização da Solução]{Formalização da Solução}
 % ----------------------------------------------------------
 A fim de que uma análise criteriosa possa ser feita, apresentamos a seguir um 
-conjunto de definições e terminologias que possam basear o entendimento da 
-construção do trabalho e também da avaliação dos resultados e de sua eficiência 
-e eficácia. Os conceitos aqui explicitados são tomados de forma a permitir um 
-estudo agnóstico quanto a aplicações, plataformas e provedores utilizados 
-durante a execução das ferramentas desenvolvidas neste trabalho.
+conjunto de definições e terminologias que baseiam o entendimento da 
+construção do trabalho e também a avaliação dos resultados, bem como a eficiência 
+e eficácia da solução proposta. Os conceitos aqui explicitados são tomados de 
+forma a permitir um estudo agnóstico quanto a aplicações, plataformas e provedores
+utilizados durante a execução das ferramentas desenvolvidas neste trabalho.
 
 Apresentamos também um formalismo que visa à generalização da metodologia 
 utilizada neste trabalho e a permitir a melhor descrição do raciocínio lógico 
