Melhoria na definição das Execuções

--- a/Dissertacao_Marcelo_Goncalves/capitulos/formalizacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/formalizacao.tex
@@ -140,13 +140,13 @@ software de \emph{benchmarking}.
 Damos o nome de Execução ao evento de utilização de uma Configuração para 
 executar a Aplicação sob Teste submetida a uma determinada Carga de Trabalho. 
 Dessa forma, a avaliação dos Resultados de uma Execução nos dará uma ideia de 
-como a Aplicação responderá às requisições de certo número de usuários (workload) 
+como a Aplicação responderá às requisições de certo número de usuários (Workload) 
 após ser implantada num ambiente de nuvem com certo grau de escalabilidade 
 horizontal (número de máquinas virtuais usadas). 
 
 Tomemos como exemplo uma aplicação web muito comum, um blog. São requisições 
 comuns a um blog o acesso à página principal, uma consulta às postagens de uma
-categoria e o acesso a uma determinada postagem. Agora suponhamos uma Configuração
+categoria e o acesso a uma postagem específica. Agora suponhamos uma Configuração
 composta de três instâncias de máquinas virtuais do Provedor Rackspace, do Tipo 
 "Performance 1", executando uma instalação do blog Wordpress, muito usado hoje em 
 dia. Uma Execução dessa aplicação seria a imposição da Carga de Trabalho correspondente
