Saem Heuristicas, entra Processo

--- a/Dissertacao_Marcelo_Goncalves/dissertacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.tex
@@ -169,15 +169,15 @@
 % ----------------------------------------------------------
 
 % ----------------------------------------------------------
-% Heurísticas
+% Avaliação de Capacidade
 % ----------------------------------------------------------
-\include{capitulos/heuristicas}
+\include{capitulos/processo}
 % ----------------------------------------------------------
 
 % ----------------------------------------------------------
-% Solução
+% Cloud Capacitor
 % ----------------------------------------------------------
-\include{capitulos/solucao}
+\include{capitulos/capacitor}
 % ----------------------------------------------------------
 
 % ----------------------------------------------------------
