Alterado titulo provisório

--- a/Dissertacao_Marcelo_Goncalves/dissertacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.tex
@@ -60,7 +60,7 @@
 % ---
 % Informações de dados para CAPA e FOLHA DE ROSTO
 % ---
-\titulo{Heurísticas para Predição de Configurações de\\ Custo Mínimo para Execução de Aplicações em Ambientes de Nuvem de Infraestrutura}
+\titulo{Heurísticas para Inferência de Desempenho de Configurações \\ para Execução de Aplicações em Ambientes de Nuvem de Infraestrutura}
 \autor{Marcelo Canário Gonçalves}
 \orientador{Prof. Dr. Américo Tadeu Falcone Sampaio}
 \coorientador{Prof. Dr. Nabor das Chagas Mendonça}
