Pequenas correcoes Trabalhos Relacionados

--- a/Dissertacao_Marcelo_Goncalves/capitulos/relacionados.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/relacionados.tex
@@ -6,7 +6,7 @@ computação em nuvem. Fazemos então uma análise de seus objetivos e resultado
 alcançados, bem como traçamos as semelhanças com este trabalho, avaliando quais são
 nossas contribuições diferenciais.
 
-\section{cloud comparison services}
+\section{Cloud Comparison Services}
 \subsection{Cloud Harmony}
 O projeto {\em CloudHarmony}, cujo
 objetivo é ``tornar-se a principal fonte independente, imparcial e útil de
@@ -48,7 +48,7 @@ transferência da requisição).
 Esse trabalho tem o mérito de conseguir mapear o desempenho de vários provedores de nuvem sob o ponto de
 vista de usuários espalhados por todo o mundo. Através dele, é possível escolher o melhor provedor para hospedar uma determinada aplicação, em termos das quatro métricas coletadas na época da realização dos experimentos, com base apenas na localização física dos clientes. Por outro, o trabalho não disponibiliza publicamente nenhum {\em benchmark} ou ferramenta de apoio, de modo que não é possível replicar os testes realizados em outros cenários ou com outros provedores. 
 
-\section{trial-and-test tools}
+\section{Trial-And-Test Tools}
 \subsection{Expertus}
 Um outro trabalho recente foi descrito em~\cite{jayasinghe2012}, onde os autores propõem um ambiente para execução automática de testes de desempenho em nuvens IaaS.  Nesse ambiente, chamado Expertus, os usuários implementam testes de desempenho através da geração e customização de \textit{scripts} Shell a partir de {\em templates} especificados na forma de documentos XML~\cite{jayasinghe2012}. 
 
@@ -95,7 +95,7 @@ Para iniciar os testes de desempenho de uma aplicação através do ambiente {\e
 
 A fase de mapeamento dos componentes da aplicação é realizada apenas uma vez, enquanto que a submissão para o motor de execução pode ser repetida ao critério do usuário. Ambientes como o {\em Cloud Crawler} permitem que os seus usuários testem suas aplicaçãoes em difirentes cenário de implantação e possibilitam que o mesmo entenda o comportamento da sua aplicação à medida em que ela é submetida a diferentes demandas e implantada em diferentes configurações, porém, a qualidade da avaliação de desempenho dependerá da qualidade dos cenários de testes que os usuários declararem, uma vez que o ambiente não decide qual será a nova configuração testada. O ambiente apenas segue aquilo que foi declarado pelo usuário.   
 
-\section{prediction tools}
+\section{Prediction Tools}
 \subsection{CloudProphet}
 Em \cite{li2011cloudprophet} os autores apresentam o CloudProphet, um sistema de
 predição de desempenho de aplicações em ambiente de nuvem computacional baseado 
